--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   firebase_auth: ^3.3.8
+  firebase_core: ^1.12.0
+  firebase_analytics: ^9.1.1
+  cloud_firestore: ^3.1.9
 
 dev_dependencies:
   flutter_test:
